syntax = "proto3";

option go_package="github.com/d2verb/gemu/pkg/debug/pb";

package debug;

service Debugger {
    rpc Next (NextRequest) returns (NextReply) {}
}

message NextRequest {}
message NextReply {}