syntax = "proto3";

option go_package="github.com/d2verb/gemu/pkg/debug/pb";

package debug;

service HealthChecker {
    rpc Hi (HiRequest) returns (HiReply) {}
}

message HiRequest {}
message HiReply {}